--- a/google-keep/package.json
+++ b/google-keep/package.json
@@ -7,12 +7,9 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "minigrid": "^3.1.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
@@ -25,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://btngana.viewdns.net/:8080/",
+  "proxy": "http://btngana.viewdns.net/",
   "eslintConfig": {
     "extends": [
       "react-app",
